# epsilon-UI

./: .gitignore  .replit  db_init.json  epsilon_commands.py  googleKey.json  initDB.py  iso.py  keep_alive.py  main.py  pyproject.toml  queue_manager.py  restarter.py  scraper.py  test.py  tokens.json  updateData.py  vcbot.py
data/: listofpostsA.json.3Ea1BF05  listofpostsA.json.C266AB4c  listofpostsA.json.d9fBb3aE  listofpostsB.json  listofpostsC.json  votehistoryA.json
static/css/: style.css
static/js/: script.js
templates/: restart.html  targetiso.html  votecount.html  votehistory.html
