[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
boto3 = "^1.26.23"
bs4 = "^0.0.1"
cloudscraper = "^1.2.66"
discord = "^2.1.0"
gspread = "^5.7.2"
pytz = "^2022.7"
selenium = "^4.15.2"
beautifulsoup4 = "^4.12.3"
"discord.py" = "^2.4.0"
bleach = "^6.1.0"
Flask-Cors = "^4.0.1"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"